--- a/css/styles.css
+++ b/css/styles.css
@@ -1382,7 +1382,7 @@ input[type='checkbox'] {
 	color: #fff;
 }
 .submit{
-	padding-bottom: 1.2em;
+	padding-bottom: 1.2rem;
 }
 
 /**************************/
