--- a/css/styles.css
+++ b/css/styles.css
@@ -1648,7 +1648,7 @@ a:hover.back-to-top {
 
 .ex-basic-2 .text-container.dark {
 	padding: 1.625rem 1.5rem 0.75rem 2rem;
-	background-color: #efebe5;
+	background-color: #fbf9f5;
 }
 
 .ex-basic-2 .image-container-large {
